--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "test": "webpack"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,7 +20,7 @@
     "bootstrap": "^4.1.2",
     "bootswatch": "^4.1.2",
     "css-loader": "0.28.4",
-    "jquery": "1.9.1",
+    "jquery": "^3.3.1",
     "less": "^3.7.1",
     "less-loader": "^4.1.0",
     "live-server": "^1.2.0",
